fix alignment issue

--- a/styles/components.css
+++ b/styles/components.css
@@ -79,7 +79,7 @@ input[type="file"] {
   cursor: pointer;
   margin: 1em 0;
 
-  width: 14em;
+  width: 15em;
   max-width: 100%;
   height: 1.5em;
   background-color: aqua;
